--- a/admin.html
+++ b/admin.html
@@ -110,8 +110,8 @@ document.addEventListener("DOMContentLoaded", function () {
             ${itemsHTML}
             <div class="total">
               Subtotal: ₹${subTotal.toFixed(2)}<br>
-              CGST: ₹${cgst.toFixed(2)}<br>
-              SGST: ₹${sgst.toFixed(2)}<br>
+              CGST (2.5%): ₹${cgst.toFixed(2)}<br>
+              SGST (2.5%): ₹${sgst.toFixed(2)}<br>
               <strong>Grand Total: ₹${grand.toFixed(2)}</strong>
             </div>
           </div>
@@ -262,3 +262,4 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
